--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   rating_dialog: ^2.0.4
   in_app_review: ^2.0.6
+  firebase_core: ^2.17.0
+  firebase_auth: ^4.10.1
+  tflite_flutter: ^0.10.2
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +65,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/images/
+    - assets/Modelo.tflite
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
