--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^2.17.0
   firebase_auth: ^4.10.1
   tflite_flutter: ^0.10.2
+  cloud_firestore: ^4.9.3
 
 dev_dependencies:
   flutter_test:
