--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^4.10.1
   tflite_flutter: ^0.10.2
   cloud_firestore: ^4.9.3
+  syncfusion_flutter_calendar: ^23.1.41
 
 dev_dependencies:
   flutter_test:
