--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   tflite_flutter: ^0.10.2
   cloud_firestore: ^4.9.3
   syncfusion_flutter_calendar: ^23.1.41
+  syncfusion_flutter_datepicker: ^23.1.41
 
 dev_dependencies:
   flutter_test:
