Se agrega la ventana de prediccion con el modelo vista vista modelo.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   cloud_firestore: ^4.9.3
   syncfusion_flutter_calendar: ^23.1.41
   syncfusion_flutter_datepicker: ^23.1.41
+  fl_chart: ^0.40.0
+
 
 dev_dependencies:
   flutter_test:
