Actualizado el login para obtener los datos con MySQL

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   syncfusion_flutter_calendar: ^23.1.41
   syncfusion_flutter_datepicker: ^23.1.41
   fl_chart: ^0.40.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
