--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   fl_chart: ^0.40.0
   http: ^1.1.0
   intl: ^0.18.1
+  time_range: ^1.0.2
+  time_range_picker: ^2.0.1
 
 dev_dependencies:
   flutter_test:
